syntax = "proto3";

package auth;

option go_package = "github.com/weiawesome/wes-io-live/proto/auth";

service AuthService {
  rpc GenerateTokens(GenerateTokensRequest) returns (GenerateTokensResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc RevokeTokens(RevokeTokensRequest) returns (RevokeTokensResponse);
}

message GenerateTokensRequest {
  string user_id = 1;
  string email = 2;
  string username = 3;
  repeated string roles = 4;
}

message GenerateTokensResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 access_expires_at = 3;
  int64 refresh_expires_at = 4;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  string username = 4;
  repeated string roles = 5;
  string error_message = 6;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 access_expires_at = 3;
  int64 refresh_expires_at = 4;
  string error_message = 5;
}

message RevokeTokensRequest {
  string user_id = 1;
}

message RevokeTokensResponse {
  bool success = 1;
  string error_message = 2;
}
